# eoairflow

./: .env.example  .gitignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
config/chains/: agri_anomaly_chain.json  agri_grasslandmowing_chain.json  agri_landcover_classification_chain.json  example_chain.json  preprocessing_chain.json  test_two_step.json  variable_graph_chain.json
dags/chains/: agri_anomaly_chain.py  agri_grasslandmowing_chain.py  agri_landcover_classification.py  example_chain.py  preprocessing_chain.py  test_two_step.py  variable_graph_chain.py
dags/common/: db.py  defaults.py
dags/graph/: builder.py  graph.py  node.py  parser.py
dags/operators/: db_sensor.py  docker.py
data/: airflow.db
test_scripts/: Dockerfile  script_1.py  script_2.py
